@@ -54,7 +54,7 @@ i18n:domain="rg.prenotazioni">
                                 <th scope="col" tal:condition="python:day[0]['inizio_m']!='0' or day[0]['inizio_p']!='0'"
                                 tal:content="python:day[0]['giorno'] + ' ' + day[1].strftime('%d')">Lunedi</th>
                             </tal:days>
-                            <th tal:condition="not:view/days"
+                            <th tal:condition="view/empty_week"
                               i18n:translate="no_booking_available"
                               >No booking available for this week</th>
                         </tr>
